--- a/frontend/src/app/components/user/user.component.html
+++ b/frontend/src/app/components/user/user.component.html
@@ -1,15 +1,21 @@
 
 <td>{{user.name}}</td>
 <td>{{user.email}}</td>
-<td> </td>
+<td>
+
+  <div *ngFor ="let role of roles | keyvalue">
+    <label class="badge badge-success">{{ role.value }}</label>
+  </div>
+ <!-- {{user.getRoleNames()}}-->
+</td>
 <td class = "buttons">
   <div class="row">
     <div class="col-sm-4">
       <button class="btn-info btn-sm" (click)="showUserDetail()" ><span ghyphicon glyphicon-pencil >show</span></button>
     </div>
-    <div class="col-sm-4">
+    <!--<div class="col-sm-4">
       <button class="btn-primary btn-sm" (click)="updateUser()"><span ghyphicon glyphicon-pencil >update</span></button>
-    </div>
+    </div> -->
     <div class="col-sm-4">
       <button class="btn-danger btn-sm" (click)="deleteUser()"><span ghyphicon glyphicon-trash >delete</span></button>
     </div>
