correct some bug and define show user

--- a/frontend/src/app/components/user/user.component.html
+++ b/frontend/src/app/components/user/user.component.html
@@ -13,9 +13,9 @@
     <div class="col-sm-4">
       <button class="btn-info btn-sm" (click)="showUserDetail()" ><span ghyphicon glyphicon-pencil >show</span></button>
     </div>
-    <!--<div class="col-sm-4">
+    <div class="col-sm-4">
       <button class="btn-primary btn-sm" (click)="updateUser()"><span ghyphicon glyphicon-pencil >update</span></button>
-    </div> -->
+    </div> 
     <div class="col-sm-4">
       <button class="btn-danger btn-sm" (click)="deleteUser()"><span ghyphicon glyphicon-trash >delete</span></button>
     </div>
